[metadata]
name = cluster-api-addon-provider
version = 0.1.0
description = Kubernetes operator that provides addons for Cluster API clusters.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/cluster-api-addon-provider


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    jinja2
    kube-custom-resource
    pydantic
    pyhelm3
    pyyaml

[options.entry_points]
console_scripts =
    cluster-api-addon-provider = capi_addons.operator:main
