[metadata]
name = cluster-api-addon-provider
version = 0.1.0
description = Kubernetes operator that provides addons for Cluster API clusters.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/cluster-api-addon-provider
python-requires = >=3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    jinja2
    kube-custom-resource
    kopf
    pydantic
    pyhelm3
    pyyaml
